--- a/indexnew.html
+++ b/indexnew.html
@@ -107,7 +107,7 @@
   </table>
 
   <h4 style="margin-left: 19%">
-    Link to: <a href="contact.html">Contact information.</a>
+    Link to: <a href="contactnew.html">Contact information.</a>
   </h4>
 </body>
 
