--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </table>
   </table>
   <h4>Link to: <a href="contact.html">Contact information.</a></h4>
+  <h4>Link to: <a href="indexnew.html">Updated version.</a></h4>
 </body>
 
 </html>
